# shin

./: Cargo.toml  atcomment.txt  index.html  notes.txt  rustfmt.toml  shin.js
.cargo/: config.toml
app/: Cargo.toml
app/src/: app_native.rs  app_web.rs  lib.rs
dynlib/: Cargo.toml
dynlib/src/: lib.rs
egl/: Cargo.toml  build.rs
egl/src/: lib.rs  libegl.rs  wrap.rs
example/: Cargo.toml
example/src/: glcontext.rs  glrenderer.rs  lib.rs  main.rs  renderer.rs  renderer_gl.rs  runner.rs  runner_native.rs  runner_web.rs
examples/: first.rs  second.rs  sipofwater.rs
examples/framework/: Cargo.toml
examples/framework/src/: glcontext.rs  glrenderer.rs  lib.rs  main.rs
examples/wayland-gl/: Cargo.toml
examples/wayland-gl/src/: main.rs
g0/: Cargo.toml
g0/src/: egl.rs  lib.rs  libegl.rs  libwayland_egl.rs
gl/: Cargo.toml  build.rs
gl-generator/: Cargo.toml
gl-generator/examples/: first.rs  gl-generator.rs
gl-generator/src/: gl.rs  lib.rs
gl/src/: api.rs  api_gl46.rs  api_webgl2.rs  context_egl.rs  egl.rs  gl46.rs  lib.rs  libegl.rs  libgl.rs  webgl2.rs  wrap.rs
gpu/: Cargo.toml  build.rs
gpu/src/: egl.rs  gl.rs  gl46.rs  lib.rs  libegl.rs  libwayland_egl.rs  web.rs  webgl2.rs
graphics/: Cargo.toml  build.rs
graphics/src/: egl.rs  gl.rs  gl46.rs  gl_native.rs  gl_web.rs  lib.rs  libegl.rs  libwayland_egl.rs  web.rs  webgl2.rs
gui/: Cargo.toml
gui/examples/: console.rs  gestures.rs  layout.rs  text.rs
gui/src/: context.rs  drawbuffer.rs  fontservice.rs  geometry.rs  layout.rs  lib.rs  renderer.rs  renderer_gl.rs  text.rs  texturepacker.rs  textureservice.rs
input/: Cargo.toml
input/src/: lib.rs
js/: Cargo.toml  glue.mjs  index.html
js/examples/: first.rs
js/src/: lib.rs
khronos-generator/: Cargo.toml
khronos-generator/examples/: first.rs
khronos-generator/src/: lib.rs
nohash/: Cargo.toml
nohash/src/: lib.rs
rangealloc/: Cargo.toml
rangealloc/src/: lib.rs
scopeguard/: Cargo.toml
scopeguard/src/: lib.rs
sx/: Cargo.toml
sx/examples/: text.rs
sx/src/: color.rs  drawbuffer.rs  fontservice.rs  geometry.rs  lib.rs  pipelineservice.rs  renderer_gl.rs  shaderservice.rs  texturepacker.rs  textureservice.rs
uhi/: Cargo.toml
uhi/examples/: console.rs  first.rs  gestures.rs  layout.rs  text.rs
uhi/src/: clipboardservice.rs  context.rs  drawbuffer.rs  fontservice.rs  fonttexturecache.rs  geometry.rs  interactionstate.rs  layout.rs  lib.rs  renderer.rs  renderer_gl.rs  renderer_shingl.rs  shader.glsl  text.rs  texturepacker.rs  textureservice.rs
w0/: Cargo.toml  build.rs
w0/src/: lib.rs  libxkbcommon.rs  platform_wayland.rs
wayland/: Cargo.toml  build.rs
wayland-protocols/: readme.txt
wayland-scanner/: Cargo.toml
wayland-scanner/src/: generate.rs  lib.rs  parse.rs  protocol.rs
wayland/src/: client.rs  cursor.rs  egl.rs  lib.rs  libwayland_client.rs  libwayland_cursor.rs  libwayland_egl.rs
window/: Cargo.toml  build.rs
window/src/: backend_wayland.rs  backend_web.rs  backend_winit.rs  input.rs  lib.rs  libwayland_client.rs  libwayland_cursor.rs  libxkbcommon.rs  platform_wayland.rs  platform_winit.rs  xkb.rs  xkbcommonwrap.rs
xkbcommon/: Cargo.toml
xkbcommon/src/: lib.rs  wrap.rs  xkbcommon.rs
xml/: Cargo.toml
xml-iterator/: Cargo.toml
xml-iterator/src/: lib.rs
xml/src/: lib.rs
