[workspace]
resolver = "2"
members = [
  "dynlib",
  "egl",
  "example",
  "gl",
  "input",
  "js",
  "khronos-generator",
  "sx",
  "wayland",
  "wayland-scanner",
  "window",
  "xkbcommon",
  "xml",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
ab_glyph = { version = "0.2" }
anyhow = { version = "1" }
libc = { version = "0.2" }
log = { version = "0.4" }
raw-window-handle = { version = "0.6", features = ["std"] }
winit = { version = "0.30" }
# my other repos
nohash = { path = "../dungers/nohash", package = "nohash" }
rangealloc = { path = "../dungers/rangealloc", package = "rangealloc" }
scopeguard = { path = "../dungers/scopeguard", package = "scopeguard" }
# workspace
dynlib = { path = "dynlib" }
egl = { path = "egl" }
gl = { path = "gl" }
input = { path = "input" }
js = { path = "js" }
khronos-generator = { path = "khronos-generator" }
sx = { path = "sx" }
wayland = { path = "wayland" }
wayland-scanner = { path = "wayland-scanner" }
window = { path = "window" }
xkbcommon = { path = "xkbcommon" }
xml = { path = "xml" }

