[package]
name = "app"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
raw-window-handle.workspace = true
# workspace
gl.workspace = true
input.workspace = true
window.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# workspace
egl.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
# workspace
js.workspace = true
