[package]
name = "gl"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
raw-window-handle.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# workspace
dynlib.workspace = true
wayland.workspace = true

[build-dependencies]
anyhow.workspace = true
# workspace
gl-generator.workspace = true

[features]
# NOTE: `debug` will log all function calls (when debug_assertions is on).
debug = []
EGL_KHR_image = []
EGL_MESA_image_dma_buf_export = []
