[package]
name = "gpu"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
raw-window-handle.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# workspace
dynlib.workspace = true

[build-dependencies]
anyhow.workspace = true
# workspace
gl-generator.workspace = true
