[package]
# NOTE: sx stands for simple graphics
name = "sx"
version = "0.0.0"
edition.workspace = true

[dependencies]
ab_glyph = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
# workspace
nohash = { workspace = true }
rangealloc = { workspace = true }
scopeguard = { workspace = true }

