[package]
# NOTE: sx stands for simple graphics
name = "sx"
version = "0.0.0"
edition.workspace = true

[dependencies]
ab_glyph = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
# my other repos
mars = { workspace = true, features = ["scopeguard", "rangealloc", "containers", "nohash"] }
