[package]
name = "uhi"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
fontdue.workspace = true
glam.workspace = true
log.workspace = true
# workspace
# gpu = { workspace = true, optional = true }
gpu.workspace = true

[dev-dependencies]
raw-window-handle.workspace = true
window.workspace = true

[features]
# renderer_shingl = ["dep:gpu"]
renderer_shingl = []

[[example]]
name = "first"
features = ["renderer_shingl"]
