[package]
name = "uhi"
version = "0.0.0"
edition.workspace = true

[dependencies]
ab_glyph.workspace = true
anyhow.workspace = true
glam.workspace = true
log.workspace = true
# workspace
# gpu = { workspace = true, optional = true }
gpu.workspace = true
nohash.workspace = true
rangealloc.workspace = true

[dev-dependencies]
raw-window-handle.workspace = true
# workspace
app.workspace = true
gpu.workspace = true
window.workspace = true

[features]
# renderer_gl = ["dep:gpu"]
renderer_gl = []

[[example]]
name = "first"
features = ["renderer_gl"]
