[package]
name = "uhi"
version = "0.0.0"
edition.workspace = true

[dependencies]
ab_glyph.workspace = true
anyhow.workspace = true
log.workspace = true
# workspace
# gl = { workspace = true, optional = true }
gl.workspace = true
input.workspace = true
nohash.workspace = true
rangealloc.workspace = true

[dev-dependencies]
raw-window-handle.workspace = true
# workspace
app.workspace = true
window.workspace = true

[features]
# renderer_gl = ["dep:gl"]
renderer_gl = []

[[example]]
name = "layout"
features = ["renderer_gl"]

[[example]]
name = "text"
features = ["renderer_gl"]
