[package]
name = "wayland"
version = "0.0.0"
edition.workspace = true

[dependencies]
libc = { workspace = true }
# workspace
dynlib = { workspace = true }

[build-dependencies]
# workspace
wayland-scanner = { workspace = true }

[features]
cursor-shape-v1 = []
fractional-scale-v1 = []
linux-dmabuf-v1 = []
pointer-gestures-unstable-v1 = []
tablet-v2 = []
viewporter = []
wlr-layer-shell-unstable-v1 = []
wlr-screencopy-unstable-v1 = []
xdg-shell = []
