[package]
name = "window"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
raw-window-handle.workspace = true
winit = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
libc.workspace = true
# workspace
dynlib.workspace = true

[build-dependencies]
anyhow.workspace = true

[target.'cfg(unix)'.build-dependencies]
# workspace
wayland-scanner.workspace = true

[features]
# TODO: rename to backend_winit
winit = ["dep:winit"]
