[package]
name = "window"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
raw-window-handle.workspace = true
winit = { workspace = true, optional = true }
# workspace
input.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
libc.workspace = true
# workspace
dynlib.workspace = true
wayland.workspace = true

[features]
# TODO: rename to backend_winit
winit = ["dep:winit"]
