[package]
name = "window"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
raw-window-handle = { workspace = true }
winit = { workspace = true, optional = true }
# workspace
input = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
libc = { workspace = true }
# my other repos
mars = { workspace = true, features = ["hash"] }
# workspace
xkbcommon = { workspace = true }

# workspace
[target.'cfg(not(target_family = "wasm"))'.dependencies.wayland]
workspace = true
features = [
  "cursor-shape-v1",
  "fractional-scale-v1",
  "pointer-gestures-unstable-v1",
  "tablet-v2",
  "viewporter",
  "xdg-shell",
]

[target.'cfg(target_family = "wasm")'.dependencies]
# workspace
js = { workspace = true }

[features]
# TODO: rename to backend_winit
winit = ["dep:winit"]
