[package]
name = "example-framework"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
raw-window-handle = { workspace = true }
# my other repos
mars = { workspace = true, features = ["containers", "hash"] }
# workspace
gl = { workspace = true }
input = { workspace = true }
sx = { workspace = true }
window = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# workspace
egl = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
# workspace
js = { workspace = true }

